update in verify

--- a/partners.html
+++ b/partners.html
@@ -339,9 +339,7 @@
         <a class="back-top" href="index.html#home">← Back to Home</a>
     </main>
 
-    <footer style="padding:36px;text-align:center;color:#64748b">©
-        <?php echo date('Y'); ?> Sofzenix IT Solutions LLP.
-    </footer>
+    <div class="careers-footer">© 2023 Sofzenix IT Solutions LLP</div>
 </body>
 
 </html>
