updating in partners and hiring

--- a/hiring.html
+++ b/hiring.html
@@ -451,8 +451,10 @@
             <a href="maintenance-support.html">Managed Ops & 24/7</a>
           </div>
         </li>
-        <li><a href="hiring.html">Hire</a></li>
-  <li><a href="partners.html">Partners</a></li>
+        
+
+        <li><a href="partners.html">Partners</a></li>
+         <li><a href="hiring.html">Hire</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li class="sfz-mobile-actions">
           <div class="sfz-mobile-btns">
@@ -552,6 +554,112 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform"
               class="apply" target="_blank">Apply</a>
           </div>
+        </div>
+        
+        <!-- Additional roles from the provided list (preserve original design) -->
+        <div class="role-card">
+          <div class="role-meta"><span>SKILLS</span><span>ONSITE</span></div>
+          <h3 class="role-title">Web Development</h3>
+          <p class="role-desc">Build modern, accessible, and high-performance web platforms using modern JavaScript stacks.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>CREATIVE</span><span>HYBRID</span></div>
+          <h3 class="role-title">Graphic Design</h3>
+          <p class="role-desc">Create brand-forward visual assets, motion graphics and marketing creatives with strong attention to detail.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>CONTENT</span><span>REMOTE</span></div>
+          <h3 class="role-title">Content Writing</h3>
+          <p class="role-desc">Produce high-quality technical and marketing content that drives engagement across channels.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>BUSINESS</span><span>ONSITE</span></div>
+          <h3 class="role-title">Business Development</h3>
+          <p class="role-desc">Identify and close new partnerships and enterprise opportunities to grow our customer base.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>MANAGEMENT</span><span>ONSITE</span></div>
+          <h3 class="role-title">Project / Program / Product Management</h3>
+          <p class="role-desc">Lead cross-functional teams to deliver products on time with clear outcomes and stakeholder alignment.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>OPS</span><span>ONSITE</span></div>
+          <h3 class="role-title">MS Office & Coordination</h3>
+          <p class="role-desc">Support administrative and coordination tasks to keep operations running smoothly.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>PEOPLE</span><span>ONSITE</span></div>
+          <h3 class="role-title">Human Resources (HR)</h3>
+          <p class="role-desc">Manage talent acquisition, onboarding, and employee engagement programs.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>GROWTH</span><span>REMOTE</span></div>
+          <h3 class="role-title">Social Media Handling</h3>
+          <p class="role-desc">Plan and execute social strategies, community growth, and content calendars across platforms.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>QA</span><span>REMOTE</span></div>
+          <h3 class="role-title">QA Engineer Trainee</h3>
+          <p class="role-desc">Gain hands-on QA experience testing web and mobile products with automation basics.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>IT</span><span>ONSITE</span></div>
+          <h3 class="role-title">IT Support Specialist Trainee</h3>
+          <p class="role-desc">Provide first-line technical support and maintain hardware and software across the office.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>MARKETING</span><span>ONSITE</span></div>
+          <h3 class="role-title">Marketing & Sales Executive / Associate</h3>
+          <p class="role-desc">Drive outreach, lead generation and nurture programs to convert prospects into customers.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>FINANCE</span><span>ONSITE</span></div>
+          <h3 class="role-title">Accountant Trainee</h3>
+          <p class="role-desc">Assist with bookkeeping, invoicing and basic financial reconciliations.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>SECURITY</span><span>REMOTE</span></div>
+          <h3 class="role-title">Cybersecurity</h3>
+          <p class="role-desc">Work on detection, prevention and remediation to secure our products and infrastructure.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>ENGINEERING</span><span>REMOTE</span></div>
+          <h3 class="role-title">Full Stack Development</h3>
+          <p class="role-desc">Roles across front-end, back-end and platform engineering for experienced full-stack builders.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
+        </div>
+
+        <div class="role-card">
+          <div class="role-meta"><span>OTHER</span><span>VARIOUS</span></div>
+          <h3 class="role-title">Other Related Roles</h3>
+          <p class="role-desc">If you bring a unique skillset, apply and we'll find the right fit — we hire across many functions.</p>
+          <div class="apply-row"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfCdA5h58aRVbSxCGMrRlpVpMwdysLT2DUh9ut0lggRlvsVfw/viewform" class="apply" target="_blank">Apply</a></div>
         </div>
       </div>
 
